# django-ai-assistant

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
example_project/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
example_project/app/: manage.py
example_project/app/config/: settings.py  urls.py
example_project/app/polls/: admin.py  models.py
example_project/app/polls/management/commands/: bootstrap_demo.py
example_project/app/polls/migrations/: 0001_initial.py
src/django_ai_admin/: __init__.py  admin.py  admin_assets.py  apps.py  conf.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/django_ai_admin/docs/: ai-admin.md  ai-admin_production_plan.md
src/django_ai_admin/migrations/: 0001_initial.py
src/django_ai_admin/services/: context_builder.py  executor.py  intent_router.py  llm_client.py  manifest.py  planner.py  response_contract.py
src/django_ai_admin/static/django_ai_admin/css/: drawer.css
src/django_ai_admin/static/django_ai_admin/js/: drawer.js
src/django_ai_admin/tests/: test_intent_router.py
